--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^5.0.0",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
@@ -32,6 +33,7 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "jquery-ui-themes": "^1.12.0",
+    "owl.carousel": "^2.3.4",
     "start": "^5.1.0",
     "url-loader": "^1.1.2"
   }
