--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery-ui-bundle": "^1.12.1-migrate",
     "jquery-ui-themes": "^1.12.0",
     "owl.carousel": "^2.3.4",
+    "owl.carousel2": "^2.2.1",
     "start": "^5.1.0",
     "url-loader": "^1.1.2"
   }
