--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "material-icons": "^0.3.1",
     "owl.carousel": "^2.3.4",
     "owl.carousel2": "^2.2.1",
+    "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "url-loader": "^1.1.2"
   }
